--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Bryan Blackburn</h1>
         <p>Welcome to the world of art</p>
-        <p>Under Contruction</p>
+        <p>Under Construction</p>
     </header>
 
     <button class="toggle-btn" id="toggleBtn">See More</button>
