--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
  
     <nav id="mainNav">
         <a href="#home">Home</a>
-        <a href="#gallery">Gallery</a>
         <a href="#about" onclick="openAboutModal()">About</a>
         <a href="#contact" onclick="openContactsModal()">Contact</a>
     </nav>
@@ -36,7 +35,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeAboutModal()">&times;</span>
             <h2>About Us</h2>
-            <p>Welcome to our About section! We are a team of passionate individuals dedicated to...</p>
+            <p>About section</p>
         </div>
     </div>
     
