--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h2>Featured Artwork</h2>
         <div class="gallery">
             <img src="Gandalf.jpeg" alt="Artwork 1">
-            <img src="Gandalf.jpeg" alt="Artwork 2">
-            <img src="Gandalf.jpeg" alt="Artwork 3">
+            <img src="sdog.jpg" alt="Artwork 2">
+            <img src="aiart.jpg" alt="Artwork 3">
         </div>
     </section>
 
