--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bryan Blackburn</title>
     <link rel="stylesheet" href="styles.css">
-</head>
+    <script src="scripts.js"></script></head>
+
 <body>
 
     <header>
@@ -47,7 +48,5 @@
         </div>
     </div>
     
-    <script src="scripts.js"></script>
-
 </body>
 </html>
