Add new picture

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <img src="Gandalf.jpeg" alt="Artwork 1">
             <img src="sdog.jpg" alt="Artwork 2">
             <img src="aiart.jpg" alt="Artwork 3">
+            <img src="RFeyn.jpg" alt="Artwork 4">
         </div>
     </section>
 
@@ -44,6 +45,7 @@
             <span class="close" onclick="closeContactsModal()">&times;</span>
             <h2>Bryan Blackburn</h2>
             <p>520-286-3225</p>
+            <p>bramson042@yahoo.com</p>
         </div>
     </div>
     <script src="scripts.js"></script></head>
