--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeContactsModal()">&times;</span>
             <h2>Bryan Blackburn</h2>
+            <p>Contact me if you would like a peice of art</p>
             <p>520-286-3225</p>
             <p>bramson042@yahoo.com</p>
         </div>
