--- a/index.html
+++ b/index.html
@@ -50,8 +50,6 @@
         </div>
     </div>
     <script src="scripts.js"></script></head>
-<footer>
-    ©2024
-</footer>
+<footer>©2024</footer>
 </body>
 </html>
