--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     
     <header>
         <h1>Bryan Blackburn</h1>
-        <p>Welcome to the world of art</p>
-        <p>Under Construction</p>
+        <p>Welcome to a world of art</p>
+        
     </header>
 
     <button class="toggle-btn" id="toggleBtn">See More</button>
@@ -45,6 +45,7 @@
             <span class="close" onclick="closeContactsModal()">&times;</span>
             <h2>Bryan Blackburn</h2>
             <p>Contact me if you would like a peice of art</p>
+            <p>Or to support with <a href="https://www.patreon.com/azbramart/about" target="_blank">Patreon</a></p>
             <p>520-286-3225</p>
             <p>bramson042@yahoo.com</p>
         </div>
