--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <header>
         <h1>Bryan Blackburn</h1>
         <p>Welcome to a world of art</p>
-        
     </header>
 
     <button class="toggle-btn" id="toggleBtn">See More</button>
@@ -36,7 +35,11 @@
         <div class="modal-content">
             <span class="close" onclick="closeAboutModal()">&times;</span>
             <h2>About Us</h2>
-            <p>About section</p>
+            <p>
+                Hi, I'm an artist in Arizona. My style is heavily influenced by prison art because 
+                that's where I learned to draw.  I hope to expand into doing more portraits of local
+                people from Phoenix.
+            </p>
         </div>
     </div>
     
