--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <section>
         <h2>Featured Artwork</h2>
         <div class="gallery">
-            <img src="Gandalf.jpeg" alt="Artwork 1">
-            <img src="sdog.jpg" alt="Artwork 2">
-            <img src="aiart.jpg" alt="Artwork 3">
-            <img src="RFeyn.jpg" alt="Artwork 4">
+            <img src="/img/Gandalf.jpeg" alt="Artwork 1">
+            <img src="/img/sdog.jpg" alt="Artwork 2">
+            <img src="/img/aiart.jpg" alt="Artwork 3">
+            <img src="/img/RFeyn.jpg" alt="Artwork 4">
         </div>
     </section>
 
