comments clean up

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="aboutModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeAboutModal()">&times;</span>
-            <h2>About Us</h2>
+            <h2>About</h2>
             <p>
                 Hi, I'm an artist in Arizona. My style is heavily influenced by prison art because 
                 that's where I learned to draw.  I hope to expand into doing more portraits of local
@@ -54,6 +54,8 @@
         </div>
     </div>
     <script src="scripts.js"></script></head>
-<footer>©2024</footer>
+<footer>
+    <p>©2024</p>
+</footer>
 </body>
 </html>
