--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <span class="close" onclick="closeContactsModal()">&times;</span>
             <h2>Bryan Blackburn</h2>
             <p>Contact me if you would like a peice of art</p>
-            <p>Or to support with <a href="https://www.patreon.com/azbramart/about" target="_blank">Patreon</a></p>
+            <p>Or to support with <a href="https://www.patreon.com/azbram/about" target="_blank">Patreon</a></p>
             <p>520-286-3225</p>
             <p>bramson042@yahoo.com</p>
         </div>
