--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <script src="scripts.js"></script></head>
 <footer>
-    <p>©2024</p>
+    <p>Phoenix, AZ ©2024</p>
 </footer>
 </body>
 </html>
