--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             <p>bramson042@yahoo.com</p>
         </div>
     </div>
-    <script src="scripts.js"></script></head>
+    
+    <script src="scripts.js"></script>
+    
 <footer>
     <p>Phoenix, AZ ©2024</p>
 </footer>
