--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     
     <header>
         <h1>Bryan Blackburn</h1>
-        <p>Welcome to a world of art</p>
+        <p>Fine Art, Portrait Artist<p>
+        <p>Phoenix Arizona</p>
     </header>
 
     <button class="toggle-btn" id="toggleBtn">See More</button>
  
     <nav id="mainNav">
-        <a href="#home">Home</a>
-        <a href="#about" onclick="openAboutModal()">About</a>
-        <a href="#contact" onclick="openContactsModal()">Contact</a>
+        <a href="#home"><i class="fas fa-home"></i> Home</a>
+        <a href="#about" onclick="openAboutModal()"><i class="fas fa-info-circle"></i> About</a>
+        <a href="#contact" onclick="openContactsModal()"><i class="fas fa-envelope"></i> Contact</a>
     </nav>
-   
+
     <section>
         <h2>Featured Artwork</h2>
         <div class="gallery">
