--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <p>Phoenix Arizona</p>
     </header>
 
-    <button class="toggle-btn" id="toggleBtn">See More</button>
- 
+    <button class="toggle-btn" id="toggleBtn">
+        See More
+    </button>
+
     <nav id="mainNav">
         <a href="#home"><i class="fas fa-home"></i> Home</a>
         <a href="#about" onclick="openAboutModal()"><i class="fas fa-info-circle"></i> About</a>
