--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <nav id="mainNav">
         <a href="#contact" onclick="openContactsModal()"><i class="fas fa-envelope"></i> Contact</a>
-        <a href="#home"><i class="fas fa-home"></i> Home</a>
+        <a href="#home"><i class="fas fa-home"></i></a>
         <a href="#about" onclick="openAboutModal()"><i class="fas fa-info-circle"></i> About</a>
     </nav>
 
