--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </button>
 
     <nav id="mainNav">
-        <a href="#contact" onclick="openContactsModal()"><i class="fas fa-envelope"></i> <p>Contact</p></a>
-        <a href="#home"><i class="fas fa-home"></i><p>Home</p></a>
-        <a href="#about" onclick="openAboutModal()"><i class="fas fa-info-circle"></i> <p>About</p></a>
+        <a href="#contact" onclick="openContactsModal()"><p><i class="fas fa-envelope"></i> Contact</p></a>
+        <a href="#home"><p><i class="fas fa-home"></i> Home</p></a>
+        <a href="#about" onclick="openAboutModal()"><p><i class="fas fa-info-circle"></i> About</p></a>
     </nav>
 
     <section>
