--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Bryan Blackburn</h1>
         <p>Fine Art, Portrait Artist<p>
         <p>Phoenix Arizona</p>
+        <p>Bramson042@yahoo.com</p>
     </header>
 
     <button class="toggle-btn" id="toggleBtn">
