--- a/index.html
+++ b/index.html
@@ -40,9 +40,13 @@
             <span class="close" onclick="closeAboutModal()">&times;</span>
             <h2>About</h2>
             <p>
-                Hi, I'm an artist in Arizona. My style is heavily influenced by prison art because 
-                that's where I learned to draw.  I hope to expand into doing more portraits of local
-                people from Phoenix.  
+                Hello, I'm Bryan, a self-taught artist who stumbled into drawing 
+                during my time in prison. My style is heavily influenced by prison art 
+                and culture.  The theme of my art revolves around the creation of beauty through 
+                the lens of individual experience. As I am just embarking on this project, if you resonate 
+                with my work, and would like to support a small local artist, please visit the "Contact" section. 
+                Your support means the world to me as I navigate this artistic journey. Thank you for 
+                considering being a part of my story.
             </p>
         </div>
     </div>
