--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             </a>
                             <div class="username">
                                 <i style="font-size:12px" class="fa">&#xf16d;</i>
-                                <a href="https://www.instagram.com/0gbram/">@0gbram</a>
+                                <a id="usernamea" href="https://www.instagram.com/0gbram/">@0gbram</a>
                             </div>
                         </div>
                     </div>
@@ -43,7 +43,7 @@
                     <i class="fa fa-align-justify"></i>
                 </span>
             </div>
-            <div class="text">Contact</div>
+            <div class="text"></div>
         </a>
     </div>
 </body>
