--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             </a>
                             <div class="username">
                                 <i style="font-size:12px" class="fa">&#xf16d;</i>
-                                <a id="usernamea" href="https://www.instagram.com/0gbram/">@0gbram</a>
+                                <a id="user" href="https://www.instagram.com/0gbram/">@0gbram</a>
                             </div>
                         </div>
                     </div>
