--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
     <section>
         <h2>Featured Artwork</h2>
         <div class="gallery">
+            <img src="/img/Gandalf.jpeg" alt="Artwork 0">
             <img src="/img/Gandalf.jpeg" alt="Artwork 1">
-            <img src="/img/RFeyn.jpg" alt="Artwork 4">
+            <img src="/img/Gandalf.jpeg" alt="Artwork 2">
+            <img src="/img/Gandalf.jpeg" alt="Artwork 3">
+            <img src="/img/Gandalf.jpeg" alt="Artwork 4">
+            <img src="/img/Gandalf.jpeg" alt="Artwork 5">
+            <img src="/img/Gandalf.jpeg" alt="Artwork 6">
         </div>
     </section>
 
