--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             <p>
                 Hello, I'm Bryan, a self-taught artist who stumbled into drawing 
                 during my time in prison. My style is heavily influenced by prison art 
-                and culture.  The theme of my art revolves around the creation of beauty through 
-                the lens of individual experience. As I am just embarking on this project, if you resonate 
-                with my work, and would like to support a small local artist, please visit the "Contact" section. 
+                and culture.  As I am just embarking on this project, if you resonate 
+                with my work, and would like to support a small local artist, please visit the
+                <a href="https://www.patreon.com/azbram/" target="_blank">Patreon.</a> 
                 Your support means the world to me as I navigate this artistic journey. Thank you for 
                 considering being a part of my story.
             </p>
