--- a/index.html
+++ b/index.html
@@ -34,15 +34,25 @@
     <section>
         <h2>Featured Artwork</h2>
         <div class="gallery">
-            <img src="/img/Gandalf.jpeg" alt="Artwork 0">
-            <img src="/img/Gandalf.jpeg" alt="Artwork 1">
-            <img src="/img/Gandalf.jpeg" alt="Artwork 2">
-            <img src="/img/Gandalf.jpeg" alt="Artwork 3">
-            <img src="/img/Gandalf.jpeg" alt="Artwork 4">
-            <img src="/img/Gandalf.jpeg" alt="Artwork 5">
-            <img src="/img/Gandalf.jpeg" alt="Artwork 6">
+            <div class="artwork-container">
+                <img id="artwork0" src="/img/Gandalf.jpeg" alt="Artwork 0">
+                <p>You</p>
+            </div>
+            <div class="artwork-container">
+                <img id="artwork1" src="/img/Gandalf.jpeg" alt="Artwork 1">
+                <p>Shall</p>
+            </div>
+            <div class="artwork-container">
+                <img id="artwork2" src="/img/Gandalf.jpeg" alt="Artwork 2">
+                <p>Not</p>
+            </div>
+            <div class="artwork-container">
+                <img id="artwork3" src="/img/Gandalf.jpeg" alt="Artwork 3">
+                <p>Pass</p>
+            </div>
         </div>
     </section>
+    
 
     <div id="aboutModal" class="modal">
         <div class="modal-content">
