--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bryan Blackburn</title>
+    <title>4rt</title>
     <link rel="stylesheet" href="styles.css">
-    
+    <link rel="icon" href="/img/Iconart.jpeg" type="image/x-icon">
 <body>
     
     <header>
