--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 and culture.  As I am just embarking on this project, if you resonate 
                 with my work, and would like to support a small local artist, please visit the
                 <a href="https://www.patreon.com/azbram/" target="_blank">Patreon.</a> 
-                Your support means the world to me as I navigate this artistic journey. Thank you for 
-                considering being a part of my story.
+                Your support means the world to me as I navigate this artistic journey. 
+                
             </p>
         </div>
     </div>
