--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4rt</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/img/Iconart.jpeg" type="image/x-icon">
+    <link rel="icon" href="/32x32/female_left.png" type="image/x-icon">
 <body>
     
     <header>
