--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 during my time in prison. My style is heavily influenced by prison art 
                 and culture.  As I am just embarking on this project, if you resonate 
                 with my work, and would like to support a small local artist, please visit the
-                <a href="https://www.patreon.com/azbram/" target="_blank">Patreon.</a> 
+                <a href="https://www.patreon.com/azbram/" target="_blank" rel="noopener noreferrer">Patreon.</a> 
                 Your support means the world to me as I navigate this artistic journey. 
                 
             </p>
@@ -74,7 +74,7 @@
             <span class="close" onclick="closeContactsModal()">&times;</span>
             <h2>Bryan Blackburn</h2>
             <p>Contact me if you would like a peice of art</p>
-            <p>Or to support with <a href="https://www.patreon.com/azbram/about" target="_blank">Patreon</a></p>
+            <p>Or to support with <a href="https://www.patreon.com/azbram/" target="_blank" rel="noopener noreferrer">Patreon.</a></p>
             <p>520-286-3225</p>
             <p>bramson042@yahoo.com</p>
         </div>
