--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <script src="scripts.js"></script>
 <footer>
     <p>Phoenix, AZ ©2024</p>
-    <p>Game above may not have functionality, is a project I'm building, but you can come back and play it as I build it.</p>
+    <p>Game above may not have functionality, it is a project I'm building, but you can come back and play it as I build it.</p>
 </footer>
 </body>
 </html>
