--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     
     </div>
     <div id="canvas-container" class="canvas">
-        <canvas id="canvas" width="768" height="512"></canvas>
+        <canvas id="canvas"></canvas>
     </div>
     <script src="scripts.js"></script>
 <footer>
