--- a/index.html
+++ b/index.html
@@ -79,13 +79,12 @@
         </div>
     
     </div>
-    <div id="canvas-container" class="canvas">
-        <canvas id="canvas"></canvas>
+    <!-- <div id="canvas-container" class="canvas">
+        <canvas id="canvas"></canvas> -->
     </div>
     <script src="scripts.js"></script>
 <footer>
     <p>Phoenix, AZ ©2024</p>
-    <p>Game above may not have functionality</p>
 </footer>
 </body>
 </html>
