--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
             <p>bramson042@yahoo.com</p>
         </div>
     </div>
+    <div id="imageContainer">
+        <img src="/animation/1_2idle.png" id= "idle" alt="image2"></img>
+    </div>
     <canvas id="mycanvas"></canvas>
     <script src="scripts.js"></script>
 <footer>
