--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
     </div>
     <div id="imageContainer">
-        <img src="/animation/1_2idle.png" id= "idle" alt="image2"></img>
+        <img src="/sprites/183024.png" id= "femsheet" alt="femsheet"></img>
     </div>
     <canvas id="mycanvas"></canvas>
     <script src="scripts.js"></script>
