--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
     </div>
     <div id="imageContainer">
         <img src="/sprites/183024.png" id= "femsheet" alt="femsheet"></img>
+        <img src="/sprites/goku_trans.png" id="goku" alt="goku"></img>
+        <img src="/sprites/thirteen.png" id="thirteen" alt="thirteen"></img>
     </div>
     <canvas id="mycanvas"></canvas>
     <script src="scripts.js"></script>
