--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <img src="/sprites/183024.png" id= "femsheet" alt="femsheet"></img>
         <img src="/sprites/goku_trans.png" id="goku" alt="goku"></img>
         <img src="/sprites/thirteen.png" id="thirteen" alt="thirteen"></img>
+        <img src="/cats/catTan.png" id="catTan" alt="catTan"></img>
     </div>
     <canvas id="mycanvas"></canvas>
     <script src="scripts.js"></script>
