--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="imageContainer">
         <img src="/sprites/183024.png" id= "femsheet" alt="femsheet"></img>
         <img src="/sprites/goku_trans.png" id="goku" alt="goku"></img>
-        <img src="/sprites/thirteen.png" id="thirteen" alt="thirteen"></img>
+        <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
         <img src="/cats/catTan.png" id="catTan" alt="catTan"></img>
     </div>
     <canvas id="mycanvas"></canvas>
