--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
     </div>
     <div id="imageContainer">
-        <img src="/sprites/183024.png" id= "femsheet" alt="femsheet"></img>
+        <img src="/backgrounds/waveA2.png" id= "waterA2" alt="waterA2"></img>
         <img src="/sprites/goku_trans.png" id="goku" alt="goku"></img>
         <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
         <img src="/cats/catTan.png" id="catTan" alt="catTan"></img>
