--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
     <canvas id="mycanvas"></canvas>
     <script src="scripts.js"></script>
 <footer>
-    <p>Phoenix, AZ ©2024 </p>
+    <h1>Temple Cats</h1>
+    <p>Phoenix, AZ ©2024 v.1</p>
 </footer>
 </body>
 </html>
