--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <script src="scripts.js"></script>
 <footer>
     <h1>Temple Cats</h1>
-    <p>Phoenix, AZ ©2024 v.1</p>
+    <p>Phoenix, AZ ©2024 templeCats v.1</p>
 </footer>
 </body>
 </html>
