--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
         <p>Phoenix Arizona</p>
         <p>Bramson042@yahoo.com</p>
     </header>
-    
-    <button id="toggleNav" class="toggle-button">
-        <i class="fas fa-bars"></i> See more
-    </button>
-
-    <nav id="mainNav" class="mainNav">
+    <!-- <nav id="mainNav" class="mainNav">
         <a href="#contact" onclick="openContactsModal()" class="nav-link">
             <i class="fas fa-envelope"></i> <span>Contact</span>
         </a>
@@ -28,27 +23,27 @@
         <a href="#about" onclick="openAboutModal()" class="nav-link">
             <i class="fas fa-info-circle"></i> <span>About</span>
         </a>
-    </nav>
+    </nav> -->
 
     <section>
         <h2>Featured Artwork</h2>
         <div class="gallery">
             <div class="artwork-container">
-                <img id="artwork0" src="/img/Gandalf.jpeg" alt="Artwork 0">
+                <img id="artwork0" src="/imgArt/Gandalf.jpeg" alt="Artwork 0">
             </div>
             <div class="artwork-container">
-                <img id="artwork1" src="/img/Gandalf.jpeg" alt="Artwork 1">
+                <img id="artwork1" src="/imgArt/Gandalf.jpeg" alt="Artwork 1">
              </div>
             <div class="artwork-container">
-                <img id="artwork2" src="/img/Gandalf.jpeg" alt="Artwork 2">
+                <img id="artwork2" src="/imgArt/Gandalf.jpeg" alt="Artwork 2">
             </div>
             <div class="artwork-container">
-                <img id="artwork3" src="/img/Gandalf.jpeg" alt="Artwork 3">
+                <img id="artwork3" src="/imgArt/Gandalf.jpeg" alt="Artwork 3">
  
             </div>
         </div>
     </section>
-
+<!-- 
     <div id="aboutModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeAboutModal()">&times;</span>
@@ -74,10 +69,9 @@
             <p>520-286-3225</p>
             <p>bramson042@yahoo.com</p>
         </div>
-    </div>
+    </div> -->
     <div id="imageContainer">
         <img src="/backgrounds/waveA2.png" id= "waterA2" alt="waterA2"></img>
-        <img src="/sprites/goku_trans.png" id="goku" alt="goku"></img>
         <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
         <img src="/cats/catTan.png" id="catTan" alt="catTan"></img>
     </div>
