--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Bryan Blackburn</h1>
         <p>Fine Art, Portrait Artist<p>
         <p>Phoenix Arizona</p>
-        <p>Bramson042@yahoo.com</p>
+        <p>bramson042@yahoo.com</p>
     </header>
     <!-- <nav id="mainNav" class="mainNav">
         <a href="#contact" onclick="openContactsModal()" class="nav-link">
@@ -24,7 +24,6 @@
             <i class="fas fa-info-circle"></i> <span>About</span>
         </a>
     </nav> -->
-
     <section>
         <h2>Featured Artwork</h2>
         <div class="gallery">
