--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <i class="fas fa-info-circle"></i> <span>About</span>
         </a>
     </nav> -->
-    <section>
+    <div>
         <h2>Featured Artwork</h2>
         <div class="gallery">
             <div class="artwork-container">
@@ -41,7 +41,7 @@
  
             </div>
         </div>
-    </section>
+    </div>
 <!-- 
     <div id="aboutModal" class="modal">
         <div class="modal-content">
