--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>    
     <header>
         <h1>Bryan Blackburn</h1>
-        <p>Fine Art, Portrait Artist<p>
+        <p>javascript Art, Portrait Artist<p>
         <p>Phoenix Arizona</p>
         <p>bramson042@yahoo.com</p>
     </header>
@@ -70,7 +70,7 @@
     <canvas id="mycanvas"></canvas>
     <script src="scripts.js"></script>
 <footer>
-    <h1>Temple Cats</h1>
+    <h1>Temple Cats 420</h1>
     <p>Phoenix, AZ ©2024 templeCats v.1</p>
 </footer>
 </body>
