--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
     <canvas id="mycanvas"></canvas>
     <script src="scripts.js"></script>
 <footer>
-    <h1>Temple Cats 420</h1>
-    <p>Phoenix, AZ ©2024 templeCats v.1</p>
+    <h1>Temple Cats</h1>
+    <p>Phoenix, AZ ©2024 templeCats v.1 catEngine by Br4m</p>
 </footer>
 </body>
 </html>
