--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     <script src="scripts.js"></script>
 <footer>
     <h1>Temple Cats</h1>
-    <p>Phoenix, AZ ©2024 templeCats v.1 catEngine by Br4m</p>
+    <p>Phoenix, AZ ©2024 templeCats v.1m</p>
+    <p> catEngine by Br4m</p>
 </footer>
 </body>
 </html>
