--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>    
     <header>
         <h1>Bryan Blackburn</h1>
-        <p>javascript Art, Portrait Artist<p>
+        <p>Javascript Art, Portrait Art<p>
         <p>Phoenix Arizona</p>
         <p>bramson042@yahoo.com</p>
     </header>
@@ -71,8 +71,8 @@
     <script src="scripts.js"></script>
 <footer>
     <h1>Temple Cats</h1>
-    <p>Phoenix, AZ ©2024 templeCats v.1</p>
-    <p> catEngine by Br4m</p>
+    <p>Phoenix, AZ ©2024 templeCats v.11</p>
+    <p>catEngine by Br4m</p>
 </footer>
 </body>
 </html>
