--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div id="imageContainer">
         <img src="/backgrounds/waveA2.png" id= "waterA2" alt="waterA2"></img>
         <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
-        <img src="/cats/catTan.png" id="catTan" alt="catTan"></img>
+        <img src="/cats/cattansheet.png" id="catTan" alt="catTan"></img>
     </div>
     <canvas id="mycanvas"></canvas>
     <script src="scripts.js"></script>
