--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>    
     <header>
         <h1>Bryan Blackburn</h1>
-        <p>Javascript Art, Portrait Art<p>
+        <p>Javascript art, portrait art<p>
         <p>Phoenix Arizona</p>
         <p>bramson042@yahoo.com</p>
+        <p>520-286-3225</p>
     </header>
     <div>
         <h2>Featured Artwork</h2>
