--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <script src="scripts.js"></script>
 <footer>
     <h1>Temple Cats</h1>
-    <button id="Hi">Start Cat</button>
+    <button id="Hi">Hi</button>
     <p>Phoenix, AZ ©2024 templeCats v.11</p>
     <p>catEngine by Br4m</p>
 </footer>
