--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
     </div>
      <div id="imageContainer">
+        <img src="/backgrounds/background3.png" id="clouds" alt="clouds"></img>
         <img src="/backgrounds/waveA2.png" id= "waterA2" alt="waterA2"></img>
         <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
         <img src="/cats/cattansheet.png" id="catTan" alt="catTan"></img>
