--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
                 <img id="artwork1" src="/imgArt/Gandalf.jpeg" alt="Artwork 1">
              </div>         
              <div class="containerstats">
-                <label for="slider">Energy:</label>
-                <input type="range" id="slider" min="0" max="100" step="1">
+                <!-- <label for="slider">Energy:</label>
+                <input type="range" id="slider" min="0" max="100" step="1"> -->
               
-                <label for="dropdown">Size:</label>
-                <select name="dropdown2" id="dropdown">
-                   <option value="option1">Option 1</option>
-                   <option value="option2">Option 2</option>
-                   <option value="option3">Option 3</option>
+                <label for="dropdown2">Size:</label>
+                <select id="dropdown">
+                   <option value="option1">mini</option>
+                   <option value="option2">normal</option>
+                   <option value="option3">jumbo</option>
                  </select>
+
                 <label for="dropdown">Color:</label>
                 <select id="dropdown">
                   <option value="option1">Option 1</option>
