--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
               
                 <label for="dropdown2">Size:</label>
                 <select id="dropdown2" name="dropdown2">
-                   <option value="option1">mini</option>
-                   <option value="option2">normal</option>
-                   <option value="option3">jumbo</option>
+                   <option value="mini">mini</option>
+                   <option value="normal">normal</option>
+                   <option value="large">large</option>
                  </select>
 
-                <label for="dropdown">Color:</label>
+                <!-- <label for="dropdown">Color:</label>
                 <select id="dropdown" name="dropdown">
                   <option value="option1">Tan</option>
-                  <option value="option2">Yellow</option>
-                  <option value="option3">Black</option>
-                </select>
-                <button name="addcatb" onclick="setValues()">New Cat</button>
+                  <option value="option2">Tan</option>
+                  <option value="option3">Tan</option>
+                </select> -->
+                <button id="catMenuB">New Cat</button>
               </div>
             </div>
     </div>
