--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                   <option value="option2">Tan</option>
                   <option value="option3">Tan</option>
                 </select> -->
-                <button id="catMenuB">New Cat</button>
+                <button1 id="catMenuB">New Cat</button>
+                <button2 id="selectAll">Select All</button>
               </div>
             </div>
     </div>
@@ -51,9 +52,12 @@
     </div>
     <canvas id="mycanvas"></canvas>
     <script src="scripts.js"></script>
+<div id="catMenuA">
+    <button id="Hi">Restart</button>
+    <button id="selectAll">+1</button>
+</div>
 <footer>
     <h1>Temple Cats</h1>
-    <button id="Hi">Restart</button>
     <p>Phoenix, AZ ©2024 templeCats v.11</p>
     <p>catEngine by Br4m</p>
 </footer>
