--- a/index.html
+++ b/index.html
@@ -16,32 +16,11 @@
     </header>
     <div>
         <h2>Featured Artwork</h2>
-        <div class="gallery">
-            <div class="artwork-container">
-                <img id="artwork0" src="/imgArt/Gandalf.jpeg" alt="Artwork 0">
-                <img id="artwork1" src="/imgArt/Gandalf.jpeg" alt="Artwork 1">
-             </div>         
-             <div class="containerstats">
-                <!-- <label for="slider">Energy:</label>
-                <input type="range" id="slider" min="0" max="100" step="1"> -->
-              
-                <label for="dropdown2">Size:</label>
-                <select id="dropdown2" name="dropdown2">
-                   <option value="mini">mini</option>
-                   <option value="normal">normal</option>
-                   <option value="large">large</option>
-                 </select>
-
-                <!-- <label for="dropdown">Color:</label>
-                <select id="dropdown" name="dropdown">
-                  <option value="option1">Tan</option>
-                  <option value="option2">Tan</option>
-                  <option value="option3">Tan</option>
-                </select> -->
-              </div>
-            </div>
-    </div>
-     <div id="imageContainer">
+        <div class="gallery" class="artwork-container">
+            <img id="artwork0" src="/imgArt/Gandalf.jpeg" alt="Artwork 0">
+            <img id="artwork1" src="/imgArt/Gandalf.jpeg" alt="Artwork 1">        
+        </div>
+    <div id="imageContainer">
         <img src="/backgrounds/background3.png" id="clouds" alt="clouds"></img>
         <img src="/backgrounds/waveA2.png" id= "waterA2" alt="waterA2"></img>
         <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
@@ -51,8 +30,8 @@
     <canvas id="mycanvas"></canvas>
     <script src="scripts.js"></script>
 <div id="catMenuA">
-    <button id="Hi">Restart</button>
-    <button id="selectAll">+1</button>
+    <button type=button id="Hi">Restart</button>
+    <button type=button id="selectAll">+1</button>
 </div>
 <footer>
     <h1>Temple Cats</h1>
