--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
         <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
         <img src="/cats/cattansheet.png" id="catTan" alt="catTan"></img>
         <img src="/cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
+        <img src="/cats/explosions.png" id="detonate" alt="detonate"></img>
     </div>
     <canvas id="mycanvas"></canvas>
     <script src="scripts.js"></script>
 <div id="catMenuA">
     <button type=button id="Hi">Restart</button>
     <button type=button id="selectAll">+1</button>
+    <!-- <button type=button id="detonateb">Detonate</button> -->
 </div>
 <footer>
     <h1>Temple Cats</h1>
