--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
     </header>
     <div>
         <h2>Featured Artwork</h2>
-        <div class="gallery" class="artwork-container">
+        <div class="gallery">
             <img id="artwork0" src="/imgArt/Gandalf.jpeg" alt="Artwork 0">
             <img id="artwork1" src="/imgArt/Gandalf.jpeg" alt="Artwork 1">        
         </div>
+    </div>    
     <div id="imageContainer">
         <img src="/backgrounds/background3.png" id="clouds" alt="clouds"></img>
         <img src="/backgrounds/waveA2.png" id= "waterA2" alt="waterA2"></img>
@@ -30,11 +31,11 @@
     </div>
     <canvas id="mycanvas"></canvas>
     <script src="scripts.js"></script>
-<div id="catMenuA">
+    <div id="catMenuA">
     <button type=button id="Hi">Restart</button>
     <button type=button id="selectAll">+1</button>
     <!-- <button type=button id="detonateb">Detonate</button> -->
-</div>
+    </div>
 <footer>
     <h1>Temple Cats</h1>
     <p>Phoenix, AZ ©2024 templeCats v.11</p>
