--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
         <img src="/cats/explosions.png" id="detonate" alt="detonate"></img>
     </div>
     <canvas id="mycanvas"></canvas>
-    <script src="scripts.js"></script>
+    <script src="game.js"></script>
     <div id="catMenuA">
     <button type=button id="Hi">Restart</button>
     <button type=button id="selectAll">+1</button>
-    <!-- <button type=button id="detonateb">Detonate</button> -->
     </div>
 <footer>
     <h1>Temple Cats</h1>
