--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="/backgrounds/waveA2.png" id= "waterA2" alt="waterA2"></img>
         <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
         <img src="/cats/cattansheet.png" id="catTan" alt="catTan"></img>
-        <img src="/cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
+        <img src="cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
         <img src="/cats/explosions.png" id="detonate" alt="detonate"></img>
     </div>
     <canvas id="mycanvas"></canvas>
