--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="/backgrounds/urlbackwithjump.png" id="stage" alt="stage"></img>
         <img src="/backgrounds/waveA2.png" id= "waterA2" alt="waterA2"></img>
         <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
-        <img src="/backgrounds/starfeild.png" id="starFeild" alt="starFeild"></img>
+        <img src="/backgrounds/starlong.png" id="starFeild" alt="starFeild"></img>
         <img src="cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
         <img src="/cats/explosions.png" id="detonate" alt="detonate"></img>
     </div>
