--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
         <img src="/backgrounds/starlong.png" id="starFeild" alt="starFeild"></img>
         <img src="cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
         <img src="/cats/explosions.png" id="detonate" alt="detonate"></img>
+        
     </div>
     <canvas id="mycanvas"></canvas>
     <script src="game.js"></script>
-    <div id="catMenuA">
-    <button type=button id="Hi">Restart</button>
-    <button type=button id="selectAll">+1</button>
+    <div id="catMenuA" class="catMenu">
+    <!-- <button type=button id="Hi">Restart</button>
+    <button type=button id="selectAll">+1</button> -->
+    <img src="/cats/return.png" id="return" alt="return"></img>
     </div>
 <footer>
     <h1>Temple Cats</h1>
