--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
         </div>
     </div>    
     <div id="imageContainer">
-        <img src="/backgrounds/urlbackwithjump.png" id="stage" alt="stage"></img>
-        <img src="/backgrounds/waveA2.png" id= "waterA2" alt="waterA2"></img>
+        <img src="/backgrounds/600432back.png" id="stage" alt="stage"></img>
+        <img src="/32x32/player.png" id= "player" alt="player"></img>
         <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
         <img src="/backgrounds/starlong.png" id="starFeild" alt="starFeild"></img>
         <img src="cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
         <img src="/cats/explosions.png" id="detonate" alt="detonate"></img>
+        <img src="/backgrounds/messageBox.png" id="box" alt="box"></img>
         
     </div>
     <canvas id="mycanvas"></canvas>
