--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     </div>
 <footer>
     <h1>Temple Cats</h1>
-    <p>Phoenix, AZ ©2024 templeCats v.11</p>
-    <p>catEngine by Br4m</p>
+    <p>Phoenix, AZ ©2024 catEngine by Br4m</p>
 </footer>
 </body>
 </html>
