--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     </div>    
     <div id="imageContainer">
         <img src="/backgrounds/600432back.png" id="stage" alt="stage"></img>
-        <img src="/32x32/player.png" id= "player" alt="player"></img>
+        <img src="/backgrounds/moon.png" id= "moon" alt="moon"></img>
         <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
         <img src="/backgrounds/starlong.png" id="starFeild" alt="starFeild"></img>
         <img src="cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
-        <img src="/cats/explosions.png" id="detonate" alt="detonate"></img>
+        <img src="/backgrounds/moonPhase.png" id="moonPhase" alt="moonPhase"></img>
         <img src="/backgrounds/messageBox.png" id="box" alt="box"></img>
         
     </div>
