--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>    
     <div id="imageContainer">
-        <img src="/backgrounds/600432back.png" id="stage" alt="stage"></img>
+        <img src="/backgrounds/600432back2.png" id="stage" alt="stage"></img>
         <img src="/backgrounds/moon.png" id= "moon" alt="moon"></img>
         <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
         <img src="/backgrounds/starlong.png" id="starFeild" alt="starFeild"></img>
