--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>    
     <div id="imageContainer">
         <img src="/backgrounds/600432back2.png" id="stage" alt="stage"></img>
-        <img src="/backgrounds/moon.png" id= "moon" alt="moon"></img>
+        <img src="32x32/fireSheet.png" id= "fire" alt="fire"></img>
         <img src="/backgrounds/waterAnimation.png" id="waterA" alt="waterA"></img>
         <img src="/backgrounds/starlong.png" id="starFeild" alt="starFeild"></img>
         <img src="cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
