--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="/backgrounds/starlong.png" id="starFeild" alt="starFeild"></img>
         <img src="cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
         <img src="/backgrounds/moonPhase.png" id="moonPhase" alt="moonPhase"></img>
-        <img src="/backgrounds/messageBox.png" id="box" alt="box"></img>     
+        <img src="/cats/hearts.png" id="hearts" alt="hearts"></img>     
     </div>
     <canvas id="mycanvas"></canvas>
     <script src="game.js"></script>
