--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Bryan Blackburn</h1>
         <p>Javascript art, portrait art<p>
         <p>Phoenix Arizona</p>
-        <p>bramson042@yahoo.com</p>
+        <p>bramson042@gmail.com</p>
         <p>520-286-3225</p>
     </header>
     <div>
