--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
         <img src="/cats/hearts.png" id="hearts" alt="hearts"></img>     
     </div>
     <canvas id="mycanvas"></canvas>
-    <script type="module">
-        import Game from './Game.js';
-    </script>
+    <script type="module" src="Game.js"></script>
+
 <footer>
     <h1>Temple Cats</h1>
     <p>Phoenix, AZ ©2024 catEngine by Br4m</p>
