Revert "file system update"
This reverts commit 52ed4ff85fd936d7eb05cb908773f944c6fe1477.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         <img src="/cats/hearts.png" id="hearts" alt="hearts"></img>     
     </div>
     <canvas id="mycanvas"></canvas>
-    <script type="module">
-        import Game from './Game.js';
-    </script>
+    <script src="game.js"></script>
 <footer>
     <h1>Temple Cats</h1>
     <p>Phoenix, AZ ©2024 catEngine by Br4m</p>
