--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <footer>
     <h1>Temple Cats</h1>
     <p>Phoenix, AZ ©2024 catEngine by Br4m</p>
+    <p>Music by Marcelo Fernandez</p>
 </footer>
 </body>
 </html>
