--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <h2>Featured Artwork</h2>
         <div class="gallery">
             <img id="artwork0" src="/imgArt/Gandalf.jpeg" alt="Artwork 0">
-            <img id="artwork1" src="/imgArt/Gandalf.jpeg" alt="Artwork 1">        
+            <img id="artwork1" src="/imgArt/Gandalf.jpeg" alt="Artwork 1">
+      
         </div>
     </div>    
     <div id="imageContainer">
@@ -33,6 +34,7 @@
     <canvas id="mycanvas"></canvas>
     <script src="game.js"></script>
 <footer>
+    <button id="mute">play/pause</button>  
     <h1>Temple Cats</h1>
     <p>Phoenix, AZ ©2024 catEngine by Br4m</p>
 </footer>
