--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <canvas id="mycanvas"></canvas>
     <script src="game.js"></script>
 <footer>
-    <button id="mute">play/pause</button>  
+    <button id="mute">Sound</button>  
     <h1>Temple Cats</h1>
     <p>Phoenix, AZ ©2024 catEngine by Br4m</p>
 </footer>
