--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
     <canvas id="mycanvas"></canvas>
     <script src="game.js"></script>
 <footer>
-    <button id="mute">Sound</button>  
+    <button id="mute">music</button>  
     <h1>Temple Cats</h1>
     <p>Phoenix, AZ ©2024 catEngine by Br4m</p>
+    <p style="font-size: 5px">Music by Marcelo Fernandez</p>
 </footer>
 </body>
 </html>
