--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <button id="mute" type="button">Sound on/off</button>  
     <h1>Temple Cats</h1>
     <p>Phoenix, AZ ©2024 catEngine by Br4m</p>
-    <p2>Music by Marcelo Fernandez</p2>
+    <!-- <p2>Music by Marcelo Fernandez</p2> -->
 </footer>
 </body>
 </html>
