--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <img src="/backgrounds/starlong.png" id="starFeild" alt="starFeild"></img>
         <img src="cats/catsMulti.png" id="catsMulti" alt="catsMulti"></img>
         <img src="/backgrounds/moonPhase.png" id="moonPhase" alt="moonPhase"></img>
-        <img src="/cats/hearts.png" id="hearts" alt="hearts"></img>     
+        <img src="/cats/hearts.png" id="hearts" alt="hearts"></img> 
+        <img src="/32x32/thisfile.png" id="flower" alt="flower"></img>    
     </div>
     <canvas id="mycanvas"></canvas>
     <script src="game.js"></script>
