--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>520-286-3225</h2>
     </header>
     <div>
-        <h2>Featured Artwork</h2>
+        <h2 id="feat">Featured Artwork</h2>
         <div class="gallery">
             <img id="artwork0" src="/imgArt/Gandalf.jpeg" alt="Artwork 0">
             <img id="artwork1" src="/imgArt/Gandalf.jpeg" alt="Artwork 1">
