--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <canvas id="mycanvas"></canvas>
     <script src="game.js"></script>
 <footer>
-    <button id="mute" type="button">Sound on/off</button>  
+    <button id="mute" type="button">Try Beta</button>  
     <h1>Temple Cats</h1>
     <p>Phoenix, AZ ©2024 catEngine by Br4m</p>
     <p2>Music by Marcelo Fernandez</p2>
