--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <canvas id="mycanvas"></canvas>
     <script src="game.js"></script>
 <footer>
-    <button id="mute" type="button">*Arcade*</button>  
+    <button id="mute" type="button">Arcade Beta Click to try</button>  
     <h1>Temple Cats</h1>
     <p>Phoenix, AZ ©2024 catEngine by Br4m</p>
-    <p2>Music by Marcelo Fernandez</p2>
+    <!-- <p2>Music by Marcelo Fernandez</p2> -->
 </footer>
 </body>
 </html>
